test/bad/functions/type07.px

func f(y: Int = 0): Void def
    return

g = f
g(y=1)
